force-app/main/default/objects/Program/fields/Program_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Program_Acronym__c</fullName>
    <description>Short Name for the Scheme/Program</description>
    <inlineHelpText>Short Name for the Scheme/Program</inlineHelpText>
    <label>Program Acronym</label>
    <length>10</length>
    <type>Text</type>
</CustomField>