force-app/main/default/objects/Program/fields/Program_Number__c.field-meta.xml
<CustomField>
    <fullName>Program_Number__c</fullName>
    <description>Auto Generated reference number that is unique identifier of Program/scheme</description>
    <displayFormat>PR-{000}</displayFormat>
    <label>Program Number</label>
    <type>AutoNumber</type>
</CustomField>