force-app/main/default/objects/Program/fields/Program_Reference__c.field-meta.xml
<CustomField>
    <fullName>Program_Reference__c</fullName>
    <formula>Program_Acronym__c+&quot;-&quot;+Program_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Reference</label>
    <type>Text</type>
</CustomField>