force-app/main/default/objects/Program/recordTypes/Grant_Schemes.recordType-meta.xml
<RecordType>
    <fullName>Grant_Schemes</fullName>
    <active>true</active>
    <label>Grant Schemes</label>
</RecordType>